--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ pytest-asyncio = "==0.18.*"
 fastapi = {extras = ["all"], version = "==0.75.*"}
 uvicorn = {extras = ["standard"], version = "*"}
 httpx = "==0.22.*"
+alembic = "==1.7.*"
+asyncpg = "==0.25.*"
+yoyo-migrations = "==7.3.*"
+psycopg2 = "==2.9.*"
 
 [dev-packages]
 
@@ -21,8 +25,11 @@ python_version = "3.10"
 [scripts]
 main = "python main.py"
 pytest = "python -m pytest ."
-
 #lints
 black = "python -m black ."
 isort = "python -m isort ."
 flake = "python -m flake8 ."
+# migrations
+makemigrations = "python -m yoyo new -m"
+migrate = "python -m yoyo apply --database $DB_DSN"
+rollback = "python -m yoyo rollback --database $DB_DSN"
