--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,31 +7,27 @@ networks:
       name: common
 
 services:
-#  politic_db:
-#    image: postgres:14-alpine
-#    environment:
-#      POSTGRES_PASSWORD: test
-#      POSTGRES_USER: test
-#      POSTGRES_DB: auth_service
-#      POSTGRES_HOST_AUTH_METHOD: trust
-#    networks: [ "internal" ]
-#    ports:
-#      - "5432:5432"
-#    volumes:
-#      - type: bind
-#        source: ./postgresql.conf
-#        target: /etc/postgres.conf
-  politic_game:
-#    depends_on:
-#      - politic_db
-    build: .
-    restart: on-failure
+  politic_db:
+    image: postgres:14-alpine
+    environment:
+      POSTGRES_PASSWORD: politic123
+      POSTGRES_USER: politic
+      POSTGRES_DB: politic_game
+      POSTGRES_HOST_AUTH_METHOD: trust
     networks: [ "internal" ]
-    env_file:
-      - .env
-    privileged: true
     ports:
-      - "8000:8000"
-    command: pipenv run main
-    volumes:
-      - '/var/run/docker.sock:/var/run/docker.sock'
+      - "5432:5432"
+#  politic_game:
+##    depends_on:
+##      - politic_db
+#    build: .
+#    restart: on-failure
+#    networks: [ "internal" ]
+#    env_file:
+#      - .env
+#    privileged: true
+#    ports:
+#      - "8000:8000"
+#    command: pipenv run main
+#    volumes:
+#      - '/var/run/docker.sock:/var/run/docker.sock'
