--- a/example.env
+++ b/example.env
@@ -4,3 +4,8 @@ APP_HOST=0.0.0.0
 APP_PORT=8000
 VERSION=0.0.1
 DEBUG=true
+
+# DB
+DB_DSN="postgresql://politic:politic123@localhost:5432/politic_game"
+DB_POOL_MIN_SIZE=1
+DB_POOL_MAX_SIZE=4
