--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [tool.black]
 line-length = 80
 
+[tool.isort]
+profile = "black"
+line_length = 80
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
